--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ authors = [
 ]
 
 [tool.poetry.dependencies]
-python = "==3.9.6"
-pandas = "==1.3.0"
+python = "3.9.6"
+pandas = "^1.4.1"
 
 [tool.poetry.dev-dependencies]
 
