--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ authors = [
 
 [tool.poetry.dependencies]
 python = "3.9.6"
-pandas = "^1.4.1"
+mkdocs = "^1.3.1"
+mkdocs-material = "^8.4.0"
+mkdocs-material-extensions = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
 
