--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,11 @@
 [tool.poetry]
 name = "python-dev-setup"
-version = "1.0.0"
-description = "This repository is meant to help Python developers setup their environment for increased productivity."
-readme = "README.md"
-repository = "https://github.com/jillvillany/python-dev-setup"
-authors = [
-    "Jill Villany <jillian.villany@ibm.com>"
-]
+version = "0.1.0"
+description = ""
+authors = ["Jill Villany <jillian.villany@ibm.com>"]
 
 [tool.poetry.dependencies]
-python = "3.9.6"
+python = "^3.9"
 mkdocs = "^1.3.1"
 mkdocs-material = "^8.4.0"
 mkdocs-material-extensions = "^1.0.3"
