--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.9"
 mkdocs = "^1.3.1"
 mkdocs-material = "^8.4.0"
 mkdocs-material-extensions = "^1.0.3"
+pandas = "^1.4.3"
+openpyxl = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 
